# beta-robotica-class

./: install.sh  start.sh  sub.toml  subcognitive.py
ainf_mission_planner/: CMakeLists.txt  DoxyFile  README.md  ainf_mission_planner.cdsl
ainf_mission_planner/etc/: config  config.toml
ainf_mission_planner/src/: CMakeLists.txt  mainUI.ui  specificworker.cpp  specificworker.h
ainf_slamo/: AINF_SLAMO.md  AINF_SLAMO.tex  CMakeLists.txt  DoxyFile  PROJECT_STRUCTURE.md  README.md  VIEWER_3D.md  ainf_slamo.cdsl  hall_layout.json  room_layout.json  scene_graph.usda
ainf_slamo/etc/: config  config.toml
ainf_slamo/src/: CMakeLists.txt  abstract_graphic_viewer.cpp  abstract_graphic_viewer.h  buffer_types.h  camera_viewer.cpp  camera_viewer.h  common_types.h  em_manager.cpp  em_manager.h  episodic_memory.cpp  episodic_memory.h  furniture_types.h  layout_manager.cpp  layout_manager.h  mainUI.ui  mesh_sdf_optimizer.cpp  mesh_sdf_optimizer.h  navigation_manager.cpp  navigation_manager.h  object_footprints.h  object_geometry.h  object_ownership_em.cpp  object_ownership_em.h  object_palette_panel.cpp  object_palette_panel.h  pointcloud_center_estimator.cpp  pointcloud_center_estimator.h  polygon_path_planner.cpp  polygon_path_planner.h  room_concept_ai.cpp  room_concept_ai.h  room_model.cpp  room_model.h  scene_graph_adapter.cpp  scene_graph_adapter.h  scene_graph_model.cpp  scene_graph_model.h  scene_tree_panel.cpp  scene_tree_panel.h  specificworker.cpp  (+16 more)
ainf_slamo/src/object_models/: bench_analytic_model.cpp  bench_analytic_model.h  chair_analytic_model.cpp  chair_analytic_model.h  pot_analytic_model.cpp  pot_analytic_model.h  table_analytic_model.cpp  table_analytic_model.h
armcontroller/: CMakeLists.txt  DoxyFile  README.md  armcontroller.cdsl
armcontroller/etc/: config
armcontroller/src/: CMakeLists.txt  config.h  genericworker.cpp  genericworker.h  main.cpp  simplearmI.cpp  simplearmI.h  specificworker.cpp  specificworker.h
aspirador/: CMakeLists.txt  DoxyFile  README.md  aspirador.cdsl
aspirador/etc/: config
aspirador/src/: CMakeLists.txt  CMakeListsSpecific.txt  config.h  floormeter.cpp  floormeter.h  genericworker.cpp  genericworker.h  main.cpp  mainUI.ui  specificmonitor.cpp  specificworker.cpp  specificworker.h
beta20167/: CMakeLists.txt  DoxyFile  controller.cdsl
beta20167/etc/: config
beta20167/src/: CMakeLists.txt  CMakeListsSpecific.txt  config.h  genericworker.cpp  genericworker.h  main.cpp  mainUI.ui  specificworker.cpp  specificworker.h
brm_ainf/: 1  CMakeLists.txt  DoxyFile  README.md  README.md.new  brm_ainf.cdsl
brm_ainf/etc/: config  config.new  config.toml  config.toml.new
brm_ainf/src/: CMakeLists.txt  buffer_types.h  mainUI.ui  room_bootstrapper.cpp  room_bootstrapper.h  room_concept_ai.cpp  room_concept_ai.h  room_model.cpp  room_model.h  room_vfe_bmr.cpp  room_vfe_bmr.h  specificworker.cpp  specificworker.h  viewer_2d.cpp  viewer_2d.h
chocachoca/: CMakeLists.txt  DoxyFile  README.md  chocachoca.cdsl
chocachoca/etc/: config
chocachoca/src/: CMakeLists.txt  CMakeListsSpecific.txt  config.h  genericworker.cpp  genericworker.h  grid.h  main.cpp  mainUI.ui  rcismousepickerI.cpp  rcismousepickerI.h  specificmonitor.cpp  specificmonitor.h  specificworker.cpp  specificworker.h  userinterface.cpp  userinterface.h
chocamem/: CMakeLists.txt  DoxyFile  README.md  chocamem.cdsl
chocamem/etc/: config
chocamem/src/: CMakeLists.txt  config.h  genericworker.cpp  genericworker.h  grid.h  main.cpp  mainUI.ui  rcismousepickerI.cpp  specificworker.cpp  specificworker.h
controlerComp/: CMakeLists.txt  Controller.cdsl  DoxyFile  controllercomp.kdevelop
controlerComp/etc/: generic_config  (+1 more)
forcefield/: CMakeLists.txt  DoxyFile  README.md  forcefield.cdsl
gridder/: CMakeLists.txt  DoxyFile  ESDF_IMPLEMENTATION.md  GRIDDER_API.md  GRIDDER_DOCUMENTATION.md  GRIDDER_MATH.md  MRPT_REFERENCE.md  OPTIMIZACIONES_APLICADAS.md  README.md  USER_MANUAL.md  gridder.cdsl  mapa2.gridmap  mapa_webots.gridmap
inversekinematicsComp/: CMakeLists.txt  DoxyFile  ikComp.files  lokiArm.cdsl
inversekinematicsTesterComp/: CMakeLists.txt  DoxyFile  LokiArmTester.cdsl
jacobian/: CMakeLists.txt  DoxyFile  README.md  jacobian.cdsl
localiser/: common_types.h  door_crossing_tracker.h  door_detector.cpp  door_detector.h  hungarian.cpp  hungarian.h  image_processor.h  mainUI.ui  munkres.hpp  nominal_room.h  pointcloud_center_estimator.cpp  pointcloud_center_estimator.h  ransac_line_detector.cpp  ransac_line_detector.h  room_detector.cpp  room_detector.h  time_series_plotter.cpp  time_series_plotter.h
mapper/: CMakeLists.txt  DoxyFile  README.md  mapper.cdsl
mission_planner/: CMakeLists.txt  DoxyFile  README.md  explore_mrpt.py  mission_planner.cdsl  sub.toml  subcognitive.py
mission_planner_borrar/: CMakeLists.txt  MPPI_MATH.md  README.md  convert_gridmap.py
mnist_detector/: CMakeLists.txt  README.md  mnist-detector.cdsl
navigator/: CMakeLists.txt  DoxyFile  Makefile  gotoxy.cbp  gotoxy.cdsl  navigator.cdsl
obs_person_tracker/: CMakeLists.txt  DoxyFile  README.md
person_tracker/: CMakeLists.txt  DoxyFile  README.md  learner.cpp  learner.h  person_tracker.cdsl
person_tracker/src/: CMakeLists.txt  CMakeListsSpecific.txt  config.h  dbscan.cpp  dbscan.h  genericworker.cpp  genericworker.h  main.cpp  mainUI.ui  room.cpp  room.h  room_detector.cpp  specificworker.cpp  specificworker.h  visibility_graph.cpp  visibility_graph.h  visualelementspubI.cpp  visualelementspubI.h
pong/: CLAUDE.md  PONG.md  PONG.tex  analyze_play_log.py  bench_lock_slack.py  diagnose_paddle_bias.py  diagnose_velocity_collapse.py  efe_agent.py  efe_agent_v1.py  generative_model.py  generative_model_v1.py  main.py  play_efe.py  play_efe_v1.py  pretrain_models.py  train_efe.py  validate_ball_model.py  validate_belief.py  validate_efe.py  validate_mixture_belief.py  validate_opponent.py
ra_2026/: sub.toml
rooms/: CMakeLists.txt  DoxyFile  Makefile  rooms.cbp  rooms.cdsl
utils/: wbt2usda.py
verruga/: CMakeLists.txt  README.md  verruga.cdsl
vision_segmentation/: README.md
(+262 files in other folders)
